[gd_scene load_steps=8 format=3 uid="uid://cyvqrqfg142p8"]

[ext_resource type="Script" path="res://src/scripts/power_kick.gd" id="1_3gxs1"]
[ext_resource type="Texture2D" uid="uid://bylu11il220t5" path="res://assets/skills/Power-Kick-Skill-Icon.png" id="1_r2st5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_47irj"]
radius = 55.0364

[sub_resource type="Animation" id="Animation_ghmu1"]
resource_name = "Cooldown"
length = 30.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D/Power-Kick:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.294118), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w8vgu"]
length = 0.001

[sub_resource type="Animation" id="Animation_6j8a8"]
resource_name = "activated"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D/Power-Kick:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.294118)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1jgc"]
_data = {
"Cooldown": SubResource("Animation_ghmu1"),
"RESET": SubResource("Animation_w8vgu"),
"activated": SubResource("Animation_6j8a8")
}

[node name="PowerKick" type="Area2D"]
script = ExtResource("1_3gxs1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(202, 67)
shape = SubResource("CircleShape2D_47irj")

[node name="Power-Kick" type="Sprite2D" parent="CollisionShape2D"]
modulate = Color(1, 1, 1, 0.6)
position = Vector2(-6.10352e-05, 6)
scale = Vector2(0.262292, 0.272917)
texture = ExtResource("1_r2st5")
metadata/_edit_lock_ = true

[node name="SkillAnimation2" type="AnimationPlayer" parent="."]
autoplay = "Cooldown"
libraries = {
"": SubResource("AnimationLibrary_f1jgc")
}

[node name="Cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 32.0
one_shot = true

[node name="Activated" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Activated" to="." method="_on_activated_timeout"]
